--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       volumes:
         - ./:/usr/share/nginx
       networks:
-        -app-network
+        - app-network
 
     mysql-app:
       image: mysql:5.7.22
@@ -19,6 +19,8 @@ services:
       environment:
         MYSQL_DATABASE: laravel
         MYSQL_ROOT_PASSWORD: laravel
+      networks:
+        - app-network
 networks:
   app-network:
     driver: bridge
