--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,14 @@ services:
     mysql-app:
       image: mysql:5.7.22
       ports:
-        - "3306:3306"
+        - "3307:3306"
+      volumes:
+        - .docker/dbdata:/var/lib/mysql
       environment:
         MYSQL_DATABASE: laravel
         MYSQL_ROOT_PASSWORD: laravel
+      command:
+        'mysqld --innodb-flush-method=fsync'
       networks:
         - app-network
 networks:
